k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caf-app-service
  labels:
    app: caf
spec:
  type: LoadBalancer
  selector:
    app: caf
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
